--- a/game_files/index.html
+++ b/game_files/index.html
@@ -26,7 +26,11 @@
         </section>
     
         <section class="bottom">
-            <div id="xp">Current XP: 0 To next: 500</div>
+            <div id="xp-bar">
+                <p>Current Level: 1</p>
+                <p>EXP: 0</p>
+                <p>To next level: 50</p>
+            </div>
 
             <div id="player-stats">
                 <h3>Stats:</h3>
