created hero class

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -36,8 +36,8 @@
                 <h3>Stats:</h3>
                 <p>Health: 10/10</p>
                 <p>Mana: 10/10</p>
-                <p>Atk: 5</p>
-                <p>Def: 5</p>
+                <p>Attack: 5</p>
+                <p>Defense: 5</p>
                 <p>Gold: 0</p>
             </div>
 
@@ -53,8 +53,8 @@
                 <h3>Encounter:</h3>
                 <p>Type: Ogre</p>
                 <p>Health: 10/10</p>
-                <p>Atk: 5</p>
-                <p>Def: 5</p>
+                <p>Attack: 5</p>
+                <p>Defense: 5</p>
             </div>
         </section>
 </body>
