--- a/game_files/index.html
+++ b/game_files/index.html
@@ -27,18 +27,16 @@
     
         <section class="bottom">
             <div id="xp-bar">
-                <p>Current Level: 1</p>
-                <p>EXP: 0</p>
-                <p>To next level: 50</p>
+                <p></p>
             </div>
 
             <div id="player-stats">
                 <h3>Stats:</h3>
-                <p>Health: 10/10</p>
-                <p>Mana: 10/10</p>
-                <p>Attack: 5</p>
-                <p>Defense: 5</p>
-                <p>Gold: 0</p>
+                <p id="hp"></p>
+                <p id="mana"></p>
+                <p id="attack"></p>
+                <p id="defense"></p>
+                <p id="gold"></p>
             </div>
 
             <div id="actions">
@@ -51,10 +49,10 @@
 
             <div id="enemy-stats">
                 <h3>Encounter:</h3>
-                <p>Type: Ogre</p>
-                <p>Health: 10/10</p>
-                <p>Attack: 5</p>
-                <p>Defense: 5</p>
+                <p id="type"></p>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
         </section>
 </body>
