Find encounter system basic functionality added

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -50,9 +50,9 @@
             <div id="enemy-stats">
                 <h3>Encounter:</h3>
                 <p id="type"></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p id="enemy-hp"></p>
+                <p id="enemy-atk"></p>
+                <p id="enemy-def"></p>
             </div>
         </section>
 </body>
