Enemies now properly fight back

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -45,6 +45,7 @@
                 <button class="ability-button" id="1">Atk 2: Do more stuff</button>
                 <button class="ability-button" id="2">Atk 3: Do other stuff</button>
                 <button id="encounter-button">Find Encounter</button>
+                <button id="reset-button">New Adventure</button>
             </div>
 
             <div id="enemy-stats">
