Added Character Art

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -17,7 +17,8 @@
                 <h3>Score: 0</h3>
             </div>
 
-            <div id='hero-container'>Hero</div>
+            <div id='hero-container'></div>
+            
             <div id='encounter-container'>Encounter</div>
 
             <div id="message">
