Action buttons now display ability stats

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -42,9 +42,9 @@
 
             <div id="actions">
                 <h3>Actions:</h3>
-                <button class="ability-button" id="0">Atk 1: Do some stuff</button>
-                <button class="ability-button" id="1">Atk 2: Do more stuff</button>
-                <button class="ability-button" id="2">Atk 3: Do other stuff</button>
+                <button class="ability-button" id="0"></button>
+                <button class="ability-button" id="1"></button>
+                <button class="ability-button" id="2"></button>
                 <button id="encounter-button">Find Encounter</button>
                 <button id="reset-button">New Adventure</button>
             </div>
