Changed CSS styling

--- a/game_files/index.html
+++ b/game_files/index.html
@@ -6,10 +6,14 @@
     <title>RPG</title>
     <link href="css/main.css" rel="stylesheet">
     <script src="js/main.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
         <header>
-            <H1>RPG</H1>
+            <H1>Pixel Quest!</H1>
         </header>
     
         <section class="field">
