--- a/game_files/index.html
+++ b/game_files/index.html
@@ -32,8 +32,11 @@
     
         <section class="bottom">
             <div id="xp-bar">
-                <p></p>
-            </div>
+                <div id="xp-bar-text"></div>
+                <span class="value"></span>
+            </div> 
+
+            <!-- <progress id="xp-bar" value="0" max="100"></progress> -->
 
             <div id="player-stats">
                 <h3>Stats:</h3>
