--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RPG</title>
-    <link href="css/main.css" rel="stylesheet" />
-    <script src="js/main.js" defer></script>
+    <link href="game_files/css/main.css" rel="stylesheet" />
+    <script src="game_files/js/main.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
