--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RPG</title>
     <link href="game_files/css/main.css" rel="stylesheet" />
     <script src="game_files/js/main.js" defer></script>
+    <link rel="shortcut icon" href="#" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
