Changed page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPG</title>
+    <title>Pixel Quest!</title>
     <link href="game_files/css/main.css" rel="stylesheet" />
     <script src="game_files/js/main.js" defer></script>
     <link rel="shortcut icon" href="#" />
