Added the ability to buy and use items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Pixel Quest!</title>
     <link href="game_files/css/main.css" rel="stylesheet" />
     <script src="game_files/js/main.js" defer></script>
-    <link rel="shortcut icon" href="#" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,6 +54,7 @@
         <button class="ability-button" id="1"></button>
         <button class="ability-button" id="2"></button>
         <button id="encounter-button">Find Encounter</button>
+        <button id="potion-button"></button>
         <button id="reset-button">New Adventure</button>
       </div>
 
@@ -64,6 +64,8 @@
         <p id="enemy-hp"></p>
         <p id="enemy-atk"></p>
         <p id="enemy-def"></p>
+        <button class="rest-button">Rest: 25 gold</button>
+        <button class="purchase-button">Buy a potion: 50 gold</button>
       </div>
     </section>
   </body>
